# LearnOpenGL-Attempt

./: .gitignore  .gitmodules  CMakeLists.txt
build_scripts/windows/: build_cmake.ps1  build_msvc.ps1  create_project.ps1  git_push.ps1
cmake_macros/: prac.cmake
common/: CMakeLists.txt  helpers.h  imgui_wrapper.cpp  primitive_mesh.h  project_paths.h.in
common/camera/: camera.h
common/mesh_loading/: mesh.cpp  mesh.h  model.cpp  model.h
common/model/: mesh.cpp  mesh.h  model.cpp  model.h
common/shader/: shader.cpp  shader.h
common/text-rendering/: sdf.cpp  sdf.h
common/textures/: texture.cpp  texture.h
src/Chapter01/01.1.getting.started.hello.window/: CMakeLists.txt
src/Chapter01/01.2.hello.triangle/: CMakeLists.txt
src/Chapter01/01.2.hello.triangle_debug_output/: CMakeLists.txt
src/Chapter01/01.2.hello.triangle_exercise01/: CMakeLists.txt
src/Chapter01/01.2.hello.triangle_exercise02/: CMakeLists.txt
src/Chapter01/01.2.hello.triangle_exercise03/: CMakeLists.txt
src/Chapter01/01.3.shaders/: CMakeLists.txt
src/Chapter01/01.4.textures/: CMakeLists.txt
src/Chapter05/5.4.0.omnidirectional_shadows_mapping_debug/: CMakeLists.txt
src/Chapter05/5.4.0.omnidirectional_shadows_mapping_debug/shaders/: debug.frag  debug.vert  omnidirectional_shadow_mapping.frag  omnidirectional_shadow_mapping.vert  temp.frag  temp.vert
src/Chapter05/5.4.0.omnidirectional_shadows_mapping_debug/src/: 5.4.0.omnidirectional_shadows_mapping_debug.cpp
template/: CMakeLists.txt  template.cpp
template/shaders/: template.frag  template.vert
template/src/: template.cpp
(+257 files in other folders)
